log/build_2025-05-24_22-35-54/yolov5_bytetrack_ros/stderr.log
  File "/home/jf/tello_tracking_ws/install/yolov5_bytetrack_ros/lib/python3.10/site-packages/yolov5_bytetrack_ros/tracker_node.py", line 180
    ))
    ^
SyntaxError: unmatched ')'

